err/distex.err
Listing '.'...
Listing './bin'...
Compiling './bin/dill_unpickle.py'...
Compiling './bin/get_objgraph.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cloudpickle'...
Listing './lib/python3.5/site-packages/cloudpickle-0.5.2.dist-info'...
Listing './lib/python3.5/site-packages/dill'...
Listing './lib/python3.5/site-packages/dill-0.2.7.1.egg-info'...
Listing './lib/python3.5/site-packages/distex'...
Compiling './lib/python3.5/site-packages/distex/pool.py'...
***   File "./lib/python3.5/site-packages/distex/pool.py", line 58
    raise ValueError(f'Bad server specification: {url}')
                                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/distex/processor.py'...
***   File "./lib/python3.5/site-packages/distex/processor.py", line 69
    return f'{self._unix_path}'
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/distex/server.py'...
***   File "./lib/python3.5/site-packages/distex/server.py", line 30
    _logger.info(f'Serving on port {self._port}')
                                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/distex/util.py'...
***   File "./lib/python3.5/site-packages/distex/util.py", line 76
    raise ValueError(f'{it} is not iterable')
                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/distex/worker.py'...
***   File "./lib/python3.5/site-packages/distex/worker.py", line 28
    return f'<Worker {self.peername}>'
                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/distex-0.5.4.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
